Add version number to proj file

--- a/src/VaultCredentialRotator/VaultCredentialRotator.csproj
+++ b/src/VaultCredentialRotator/VaultCredentialRotator.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyName>VaultCredentialRotator</AssemblyName>
     <RootNamespace>VaultCredentialRotator</RootNamespace>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
