--- a/src/VaultCredentialRotator/appsettings.json
+++ b/src/VaultCredentialRotator/appsettings.json
@@ -2,6 +2,7 @@
   "AWS": {
     "BaseClientTokenUri": "",
     "BaseCredentialsUri": "",
+    "ValidateServerCertificates": "true",
     "Roles": [
 
     ]
